--- a/src/app/modules/configuration-management/configuration-edit/configuration-edit.component.html
+++ b/src/app/modules/configuration-management/configuration-edit/configuration-edit.component.html
@@ -1,5 +1,13 @@
-<form [formGroup]="configurationForm" class="kt-form kt-form--group-seperator-dashed" style="width: 836px;">
-    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Edit Page</div>
+<form [formGroup]="configurationForm" class="kt-form kt-form--group-seperator-dashed" style="width:500px;">
+    <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
+        <div class="kt-portlet__head-label flex">
+          <h3 class=" w-11/12 heading">Edit Page</h3>
+          <button type="button"   color="danger" class="w-1/12 text-right" [mat-dialog-close]="data.animal"
+          cdkFocusInitial>
+          <mat-icon class="text-red-500">cancel</mat-icon>
+          </button>
+        </div>
+      </div>
     <div>
         <mat-alert *ngIf="hasFormErrors" type="warn" [duration]="30000" [showCloseButton]="true"
                    (close)="onAlertClose($event)">
@@ -56,15 +64,15 @@
 
 
         <div>
-            <div class="kt-form__actions kt-form__actions--solid  py-4 border-t">
+            <div class="kt-form__actions kt-form__actions--solid  pt-4 border-t">
                 <div class="row text-right">
                     <div class="col-lg-12">
-                        <button type="button" class="shadow-md btn bg-red-500 text-white rounded-md mx-2" mat-raised-button color="danger"
+                        <!-- <button type="button" class="shadow-md btn bg-red-500 text-white rounded-md mx-2" mat-raised-button color="danger"
                                 [mat-dialog-close]="data.animal"
                                 cdkFocusInitial>
                                 <mat-icon class="mr-2">cancel</mat-icon>Cancel
-                        </button>&nbsp;
-                        <button type="button" class="btn btn-primary" mat-raised-button color="primary"
+                        </button>&nbsp; -->
+                        <button type="button" class="btn btn-primary bg-green" mat-raised-button color="primary"
                                 (click)="onSubmit()"
                                 [disabled]="viewLoading || submitted">
                             <mat-icon class="mr-2">save</mat-icon>Save
