--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -282,7 +282,7 @@
 
                             <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
                                 <div class="kt-portlet__head-label">
-                                    <h5 class="kt-portlet__head-title">Other Info</h5>
+                                    <h5 class="heading">Other Info</h5>
                                 </div>
                             </div>
 
@@ -425,7 +425,7 @@
 
                             <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
                                 <div class="kt-portlet__head-label">
-                                    <h5 class="kt-portlet__head-title">Personal Info</h5>
+                                    <h5 class="heading">Personal Info</h5>
                                 </div>
                             </div>
 
@@ -634,7 +634,7 @@
 
                             <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
                                 <div class="kt-portlet__head-label">
-                                    <h5 class="kt-portlet__head-title">New Info</h5>
+                                    <h5 class="heading">New Info</h5>
                                 </div>
                             </div>
 
