--- a/src/app/modules/report-managment/exception-detail/exception-detail.component.html
+++ b/src/app/modules/report-managment/exception-detail/exception-detail.component.html
@@ -11,10 +11,10 @@
     </thead>
     <tbody>
     <tr>
-        <td class="text-black w-24"> <div class="w-96 mx-4 break-words">{{errorLogDetails.InputParameters}}</div> </td>
-        <td class="text-black w-24"> <div class="w-24 mx-4 break-words">{{errorLogDetails.ZtblInputParams}}</div>    </td>
-        <td class="text-black w-56"> <div class="w-96 mx-4 break-words">{{errorLogDetails.ErrorTrace}}</div></td>
-        <td class="text-black w-56"> <div class="w-24 mx-4 break-words"> {{errorLogDetails.Message}}</div> </td>
+        <td class="text-black w-24" style="vertical-align:text-top"> <div class="w-96 mx-4 break-words">{{errorLogDetails.InputParameters}}</div> </td>
+        <td class="text-black w-24" style="vertical-align:text-top"> <div class="w-24 mx-4 break-words">{{errorLogDetails.ZtblInputParams}}</div>    </td>
+        <td class="text-black w-56" style="vertical-align:text-top"> <div class="w-96 mx-4 break-words">{{errorLogDetails.ErrorTrace}}</div></td>
+        <td class="text-black w-56" style="vertical-align:text-top"> <div class="w-24 mx-4 break-words"> {{errorLogDetails.Message}}</div> </td>
     </tr>
     </tbody>
 </table>
