--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -62,7 +62,7 @@
 
                         </div>
                         <!--                        *ngIf="IsNdcDefaulter"-->
-                        <div class="form-group kt-form__group px-2 py-2 mx-0 border row mt-6">
+                        <div class="form-group kt-form__group px-2 py-2 mx-0 border row mt-6" *ngIf="IsNdcDefaulter">
                             <div class="col-lg-12 kt-margin-bottom-20-mobile py-3">
                                 <h5 class="text-blue">Summary</h5>
                                 <p>Customer is not eligible due to following reasons</p>
@@ -70,7 +70,8 @@
                                     <tbody>
                                     <tr>
                                         <td class="text-blue pl-0">BMVS/NIVS:</td>
-                                        <td class="pl-0" [ngClass]="{'text-red': BMVS_NIVS == 'Not Found'}">{{BMVS_NIVS}}</td>
+                                        <td class="pl-0"
+                                            [ngClass]="{'text-red': BMVS_NIVS == 'Not Found'}">{{BMVS_NIVS}}</td>
                                     </tr>
                                     <tr>
                                         <td class="text-blue pl-0">NDC:</td>
@@ -82,32 +83,9 @@
                                     </tr>
                                     </tbody>
                                 </table>
-
-                                <a mat-flat-button [routerLink]="['dashboard']"
-                                   class=" mt-2 bg-red-500 text-white mat-focus-indicator mat-flat-button mat-button-base mat-primary">Close/Exit</a>
-                            </div>
-                        </div>
-                        <div class="py-2">
-                            <div class="heading">Regenerate ECIB Request</div>
-
-                            <button mat-flat-button class=" my-3 bg-green mat-focus-indicator mat-flat-button mat-button-base mat-primary">Regenerate</button>
-
-                            <div class="heading">Remarks</div>
-                            <mat-form-field appearance="outline" class="w-full mt-2">
-                                <input matInput placeholder="Remarks">
-                              </mat-form-field>
-
-                        </div>
-                        <div class="py-2">
-                            <div class="heading ">Attach An Image</div>
-                            <div class="py-3">
-                                <input type="file">
                             </div>
                         </div>
 
-                        <div>
-                            <button mat-flat-button class="bg-green mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button">Submit</button>
-                        </div>
 
                     </div>
                     <!--BioMatric Case Perform-->
@@ -333,7 +311,36 @@
                                     </tr>
                                     </tbody>
                                 </table>
+                                <a mat-flat-button [routerLink]="['dashboard']"
+                                   class=" mt-2 bg-red-500 text-white mat-focus-indicator mat-flat-button mat-button-base mat-primary">Close/Exit</a>
                             </div>
+                        </div>
+                        <div class="py-2" *ngIf="IsEcibDefaulter">
+                            <div class="heading">Regenerate ECIB Request</div>
+
+                            <button mat-flat-button
+                                    class=" my-3 bg-green mat-focus-indicator mat-flat-button mat-button-base mat-primary">
+                                Regenerate
+                            </button>
+
+                            <div class="heading">Remarks</div>
+                            <mat-form-field appearance="outline" class="w-full mt-2">
+                                <input matInput placeholder="Remarks">
+                            </mat-form-field>
+
+                        </div>
+                        <div class="py-2" *ngIf="IsEcibDefaulter">
+                            <div class="heading ">Attach An Image</div>
+                            <div class="py-3">
+                                <input type="file">
+                            </div>
+                        </div>
+
+                        <div>
+                            <button mat-flat-button
+                                    class="bg-green mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                                    type="button">Submit
+                            </button>
                         </div>
                     </div>
                     <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border mt-2">
