create loan bug fix and orr minor updates

--- a/src/app/modules/loan/orr-list/orr-list.component.html
+++ b/src/app/modules/loan/orr-list/orr-list.component.html
@@ -47,7 +47,7 @@
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                         <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
                             <mat-label>Status</mat-label>
-                            <mat-select formControlName="Status">
+                            <mat-select disabled formControlName="Status">
                                 <mat-option>
                                     <ngx-mat-select-search placeholderLabel="Search Loan Status..." (focusout)="validateLoanStatusOnFocusOut()" noEntriesFoundLabel="No Loan Status Found" (keyup)="searchLoanStatus($event.target.value)">
                                     </ngx-mat-select-search>
@@ -145,9 +145,12 @@
           <ng-container matColumnDef="Action">
             <mat-header-cell *matHeaderCellDef>Action</mat-header-cell>
             <mat-cell *matCellDef="let loan">
-              <button mat-icon-button color="primary" (click)="editLoan(loan)">
-                <mat-icon style="margin-left: 5px;" title="View Loan">accessibility_new</mat-icon>
+              <button mat-icon-button color="primary" (click)="ApplyOrr(loan)">
+                <mat-icon style="margin-left: 5px;" title="View Loan">add</mat-icon>
               </button>
+                <button mat-icon-button color="primary" (click)="ViewOrr(loan)">
+                    <mat-icon style="margin-left: 5px;" title="View Loan">visibility</mat-icon>
+                </button>
             </mat-cell>
           </ng-container>
 
