--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -603,3 +603,20 @@ img{
 .mat-option-text.mat-option-text {
   white-space: normal;
 }
+.mat-select-panel mat-option.mat-option {
+  margin: 1rem 0;
+  overflow: visible;
+  line-height: initial;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  }
+  
+  .mat-option-text.mat-option-text {
+  white-space: normal;
+  }
+
+  .mat-select-panel-wrap{
+    .mat-select-panel{
+      min-width: calc(100% + 9px) !important;
+    }
+  }
