--- a/src/app/shared/crud/alert-dialog-confirmation/alert-dialog-confirmation.component.html
+++ b/src/app/shared/crud/alert-dialog-confirmation/alert-dialog-confirmation.component.html
@@ -1,27 +1,34 @@
 <div class="kt-portlet">
-  <div class="kt-form">
-    <div class="kt-portlet__body">
+    <div class="kt-form">
+        <div class="kt-portlet__body">
 
-      <div class="form-group">
+            <div class="form-group">
 
-        <div class="col-lg-12 text-center mt-1">
-          <img src="./assets/media/icons/confirmation.jpg" class="img-responsive center-block w-32 mx-auto" alt="icon" />
-        </div>
+                <div class="col-lg-12 text-center mt-1">
+                    <img src="./assets/media/icons/confirmation.jpg" class="img-responsive center-block w-32 mx-auto"
+                         alt="icon"/>
+                </div>
 
-        <div class="col-lg-12 text-center">
-          <span style="font-size: 24px !important; font-weight: 600 !important; color: #0f298f !important; text-align:center">{{data.title}}</span>
+                <div class="col-lg-12 text-center">
+                    <span
+                        style="font-size: 24px !important; font-weight: 600 !important; color: #0f298f !important; text-align:center">{{data.title}}</span>
+                </div>
+                <div class="col-lg-12 text-center  mt-1">
+                    <span style="font-weight:500">{{data.description}}</span>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-12 text-center  mt-1">
-          <span style="font-weight:500">{{data.description}}</span>
+        <div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
+            <div class="kt-form__actions kt-form__actions--sm  mt-4" style="gap: 10%;">
+                <!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
+                <button mat-button (click)="onYesClick()" class="btn btn-success bg-green " style="width: 35%;"
+                        color="primary" cdkFocusInitial [disabled]="viewLoading">Yes
+                </button>
+                <button mat-button class="button-red bg-red-500 text-white" (click)="onNoClick()"
+                        style="width: 20%;margin-left: 3%;">
+                    No
+                </button>&nbsp;
+            </div>
         </div>
-      </div>
     </div>
-    <div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
-      <div class="kt-form__actions kt-form__actions--sm  mt-4">
-        <!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
-        <button mat-button class="button-red bg-red-500 text-white" (click)="onNoClick()">No</button>&nbsp;
-        <button mat-button (click)="onYesClick()" class="btn btn-success bg-green" color="primary" cdkFocusInitial [disabled]="viewLoading">Yes</button>
-      </div>
-    </div>
-  </div>
 </div>
