--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -7,7 +7,8 @@
 
     </div>
     <!-- Header -->
-    <div class="flex flex-auto overflow-y-scroll overflow-x-hidden pb-4" style="flex-direction: column;" [style.height]="gridHeight">
+    <div class="flex flex-auto overflow-y-scroll overflow-x-hidden pb-4" style="flex-direction: column;"
+         [style.height]="gridHeight">
         <form [formGroup]="customerInfo" class="kt-form kt-form--group-seperator-dashed">
             <div class="kt-form">
                 <div class="kt-portlet__body" style="margin-top: 5px">
@@ -353,6 +354,11 @@
         <div class="kt-form__actions kt-form__actions--solid">
             <div class="row">
                 <div class="col-lg-12 text-right">
+                    <button (click)="prev()" class="bg-green" mat-raised-button
+                            *ngIf="NdcSubmit || BioMetricCapture || BiometricCredentials || ECIBPerform || ECIBPerformSuccess">
+                        <mat-icon>arrow_back</mat-icon>
+                        Previous
+                    </button>
                     <button (click)="SubmitNdc()" *ngIf="NdcSubmit"
                             class="btn  bg-green "
                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
