--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -354,9 +354,11 @@
         <div class="kt-form__actions kt-form__actions--solid">
             <div class="row">
                 <div class="col-lg-12 text-right">
-                    <button (click)="prev()" class="bg-green" mat-raised-button
+                    <button (click)="prev()"
+                            class="bg-green mat-flat-button mat-button-base mat-primary mat-focus-indicator"
+                            mat-raised-button
                             *ngIf="NdcSubmit || BioMetricCapture || BiometricCredentials || ECIBPerform || ECIBPerformSuccess">
-                        <mat-icon>arrow_back</mat-icon>
+                        <!--                        <mat-icon>arrow_back</mat-icon>-->
                         Previous
                     </button>
                     <button (click)="SubmitNdc()" *ngIf="NdcSubmit"
