--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -151,6 +151,12 @@
             <mat-card (click)="loanAccountBalance()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
             >Loan Account Balancing</p></mat-card>
         </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="insuranceReport()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+            >Insurance Report</p></mat-card>
+        </div>
     </div>
+
 
 </div>
