--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -8,7 +8,7 @@
 
         <div class="row pt-3">
             <div class="col-lg-12 col-sm-12">
-                <div class="heading">Land Information</div>
+                <div class="heading">Loan Information</div>
             </div>
 
         </div>
@@ -23,7 +23,7 @@
                 <mat-form-field class=" mat-form-field-fluid" appearance="outline">
                     <mat-label class="customMatLabel">Loancase NO: <strong class="matMandatory">*</strong>
                     </mat-label>
-                    <input matInput formControlName="LcNo" readonly>
+                    <input matInput formControlName="LcNo">
                     <mat-error *ngIf="hasError('DocumentRefNo', 'required')">LcNo
                         <strong>required</strong>
                     </mat-error>
@@ -46,19 +46,19 @@
                 </mat-form-field>
             </div>
 
-            <div class="col-lg-3 col-sm-12">
-                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                    <mat-label class="customMatLabel">Loan Type: <strong class="matMandatory">*</strong>
-                    </mat-label>
-                    <input matInput formControlName="CategoryName" readonly>
-                    <mat-error *ngIf="hasError('DocumentRefNo', 'required')">Loan Type
-                        <strong>required</strong></mat-error>
-                </mat-form-field>
-            </div>
+<!--            <div class="col-lg-3 col-sm-12">-->
+<!--                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                    <mat-label class="customMatLabel">Loan Type: <strong class="matMandatory">*</strong>-->
+<!--                    </mat-label>-->
+<!--                    <input matInput formControlName="CategoryName" readonly>-->
+<!--                    <mat-error *ngIf="hasError('DocumentRefNo', 'required')">Loan Type-->
+<!--                        <strong>required</strong></mat-error>-->
+<!--                </mat-form-field>-->
+<!--            </div>-->
 
             <div class="col-lg-3 col-sm-12">
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                    <mat-label class="customMatLabel">Loan Doc Type:<strong
+                    <mat-label class="customMatLabel">Loan Type:<strong
                         class="matMandatory">*</strong>
                     </mat-label>
                     <mat-select formControlName="DocLoanId">
@@ -84,7 +84,7 @@
         <div class="row pt-3">
             <div class="col-lg-3 col-sm-12">
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                    <mat-label class="customMatLabel">Documents:<strong class="matMandatory">*</strong>
+                    <mat-label class="customMatLabel">Loan Doc Type:<strong class="matMandatory">*</strong>
                     </mat-label>
                     <mat-select formControlName="ParentDocId">
                         <mat-option *ngFor="let documentType of SelectedDocument"
