--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -199,7 +199,7 @@
 
                     </div>
                 </div>
-
+                {{ApplicationORR|json}}
                 <div class="secondPage" *ngIf="showFinalOrrTable">
                     <div class="form-group kt-form__group row" *ngIf="dataFetched && ApplicationORR.length>0">
                         <div class="col-lg-12">
