--- a/src/app/modules/reports/insurance-report/insurance-report.component.html
+++ b/src/app/modules/reports/insurance-report/insurance-report.component.html
@@ -21,7 +21,7 @@
 
                         <div class="col-lg-12">
                             <div class="flex" style="flex-wrap: wrap;">
-                                <app-zone-branch-circle [form]="bufricationForm" [should_show_circle]="true" [is_required_circle]="true"
+                                <app-zone-branch-circle [form]="bufricationForm" [should_show_circle]="false" [is_required_circle]="false"
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
@@ -50,7 +50,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">Category<strong class="matMandatory">*</strong></mat-label>
-                                        <mat-select formControlName="Status">
+                                        <mat-select formControlName="Category">
                                             <mat-option *ngFor="let lov of categoryLov" [value]="lov.Value">
                                                 {{lov.Description}}
                                             </mat-option>
@@ -61,7 +61,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">Payment Status<strong class="matMandatory">*</strong></mat-label>
-                                        <mat-select formControlName="Status">
+                                        <mat-select formControlName="Type">
                                             <mat-option *ngFor="let lov of instypeLov" [value]="lov.Value">
                                                 {{lov.Description}}
                                             </mat-option>
