--- a/src/app/shared/crud/alert-dialog-confirmation/alert-dialog-confirmation.component.html
+++ b/src/app/shared/crud/alert-dialog-confirmation/alert-dialog-confirmation.component.html
@@ -21,8 +21,8 @@
         <div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
             <div class="kt-form__actions kt-form__actions--sm  mt-4" style="gap: 10%;">
                 <!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
-                <button mat-button (click)="onYesClick()" class="btn btn-success bg-green " style="width: 35%;"
-                        color="primary" cdkFocusInitial [disabled]="viewLoading">Yes
+                <button mat-button (click)="onYesClick()" class="btn btn-success btn-outline-success bg-green " style="width: 35%;"
+                        color="primary" cdkFocusInitial [disabled]="viewLoading"><mat-icon class="mr-2 text-white">check_circle</mat-icon>Yes
                 </button>
                 <button mat-button class="button-red bg-red-500 text-white" (click)="onNoClick()"
                         style="width: 20%;margin-left: 3%;">
