--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -23,6 +23,8 @@
                             <div class="col-lg-4 kt-margin-bottom-20-mobile">
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                     <input matInput placeholder="Enter cnic" formControlName="Cnic" maxlength="15"
+                                           (keydown)="change_cnic($event.target.value)"
+                                           (keyup)="change_cnic($event.target.value)"
                                            autocomplete="off" [mask]="maskEnums.cnic"/>
                                     <mat-error *ngIf="hasError('Cnic', 'required')">cnic <strong>required</strong>
                                     </mat-error>
@@ -34,6 +36,7 @@
                             </div>
                             <div class="col-lg-4 kt-margin-bottom-20-mobile ">
                                 <button type="button" (click)="getCustomerInfo()" mat-flat-button
+                                        [disabled]="disable_buttons"
                                         class=" ml-2  btn mt-2 bg-green rounded-md"
                                         [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
@@ -43,12 +46,14 @@
 
 
                         </div>
-                        <div class="form-group kt-form__group row pl-0 p-1 py-2 mx-0  mt-4" *ngIf="NDCPerform">
+                        <div class="form-group kt-form__group row pl-0 p-1 py-2 mx-0  mt-4"
+                             *ngIf="NDCPerform && show_ndc">
                             <div class="col-lg-12 shadow-md " style="background-color: #f6fcf8 !important;">
                                 <div class="row p-4">
                                     <div class="col-lg-6 kt-margin-bottom-20-mobile">
                                         <h5 class="text-green">NDC - Status</h5>
-                                        <p [ngClass]="{'text-red': IsNdcDefaulter == true, 'text-green': IsNdcDefaulter == false}">{{CustomerNdc.Message}}</p>
+                                        <p class="text-sm"
+                                           [ngClass]="{'text-red': IsNdcDefaulter == true, 'text-green': IsNdcDefaulter == false}">{{CustomerNdc?.Message}}</p>
                                     </div>
                                     <div class="col-lg-6 text-right kt-margin-bottom-20-mobile self-center">
                                         <a *ngIf="NDCLinkView" href="{{Customer.NDCPDFLink}}" target="_blank"
@@ -355,27 +360,35 @@
             <div class="row">
                 <div class="col-lg-12 text-right">
                     <button (click)="prev()"
-                            class="bg-green mat-flat-button mat-button-base mat-primary mat-focus-indicator"
+                            class="mat-focus-indicator mat-flat-button mat-button-base mat-primary mr-2"
                             mat-raised-button
-                            *ngIf="NdcSubmit || BioMetricCapture || BiometricCredentials || ECIBPerform || ECIBPerformSuccess">
+                            *ngIf="BioMetricCapture || BiometricCredentials || ECIBPerform || ECIBPerformSuccess">
                         <!--                        <mat-icon>arrow_back</mat-icon>-->
-                        Previous
+                        Previous State
+                    </button>
+                    <button (click)="next()"
+                            class="mat-focus-indicator mat-flat-button mat-button-base mat-primary mr-2"
+                            mat-raised-button
+                            *ngIf="BioMetricCapture || BiometricCredentials || ECIBPerform || ECIBPerformSuccess">
+                        <!--                        <mat-icon>arrow_back</mat-icon>-->
+                        Next State
                     </button>
                     <button (click)="SubmitNdc()" *ngIf="NdcSubmit"
-                            class="btn  bg-green "
+                            class="mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-green"
                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                     >
                         Next
                     </button>
                     <button (click)="saveBiomatricdata()" *ngIf="BioMetricCapture"
-                            type="button" class="btn btn-primary bg-green kt-login__btn-primary"
+                            type="button"
+                            class="mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-green"
                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                     >
                         Save & Next
                     </button>
                     <button (click)="submitCWR()"
                             *ngIf="BiometricCredentials" type="button"
-                            class="btn btn-primary  kt-login__btn-primary bg-green"
+                            class="mat-focus-indicator mat-flat-button mat-button-base mat-primary"
                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                     >
                         Next
@@ -383,14 +396,14 @@
                     <button type="button"
                             (click)="refreshEcib()"
                             *ngIf="ECIBPerform"
-                            class="btn btn-primary kt-login__btn-primary bg-green"
+                            class="mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-green"
                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                     >
                         Refresh
                     </button>
                     <button (click)="NextOpenCreateCustomer()" *ngIf="ECIBPerformSuccess"
                             type="button"
-                            class="btn btn-primary kt-login__btn-primary bg-green"
+                            class="mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-green"
                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                     >
                         Next
