--- a/src/app/modules/customer/eligibility-request/eligibility-request.component.html
+++ b/src/app/modules/customer/eligibility-request/eligibility-request.component.html
@@ -71,7 +71,7 @@
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                             <button class="mt-2 bg-gray-500"
-                                    (click)="getEligibilityRequestData()" mat-flat-button [color]="'primary'">
+                                    (click)="getEligibilityRequestData(true)" mat-flat-button [color]="'primary'">
                                 <mat-icon class="mr-2">search</mat-icon>
                                 Search
                             </button>
