--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -564,7 +564,7 @@
                                     </td>
                                     <td>
                                         <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                                            <input matInput appNumberOnly formControlName="TotalDebit"/>
+                                            <input maxlength="8" matInput appNumberOnly formControlName="TotalDebit"/>
                                         </mat-form-field>
                                     </td>
                                     <td>
