--- a/src/app/modules/reports/insurance-report/insurance-report.component.html
+++ b/src/app/modules/reports/insurance-report/insurance-report.component.html
@@ -98,7 +98,7 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                    <button class="bg-gray-500"  mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
+                                    <button class="bg-gray-500"  mat-raised-button color="primary" (click)="find()" type="button"><mat-icon class="mr-2">search</mat-icon> Find</button>
                                 </div>
                             </div>
 
